# cookiecutter-python-package-template

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  MakeFile  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.cfg
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  main.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/logger/: log_config.py  logging_config.yaml
{{cookiecutter.package_name}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
